Fri Dec  8 15:36:23 UTC 2006  Ciju John  <johnc@ociweb.com>

        * tests/run_test.lst:
          Bug_2659_Regression_Test cannot run in a single threaded build.

Fri Dec  8 05:21:38 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:

          Changed code to extract version number from ace/Version.h to be
          more resilient to leading whitespace like was added by a bug in
          the release script in the last beta.  Thanks to <rlischner at
          proteus-technologies dot com> for this patch.

Thu Dec  7 14:13:43 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/DLL_Manager.cpp:
          Made error message dependent on ACE::debug. Thanks to David Faure
          <dfaure at klaralvdalens-datakonsult dot se> for reporting this.

Thu Dec  7 14:09:43 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
          Added RTCMM test

Thu Dec  7 12:47:43 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Read_Buffer.h:
          Doxygen improvements

        * ace/Read_Buffer.cpp:
          Initialise pointer with 0 and use prefix increment

Thu Dec  7 09:47:43 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Improved rtems documentation

        * MakeProjectCreator/config/avoids_ace_for_tao.mpb:
          New base project for avoids ace_for_tao

        * bin/ciao_tests.lst
        * bin/tao_orb_tests.lst
        * bin/tao_other_tests.lst
          Disabled all tests that are disabled in a minimum_corba build also
          when using CORBA/e compact and micro

Thu Dec  7 07:49:24 UTC 2006  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_stdio.h:
        * ace/OS_NS_stdio.inl:
        * ace/OS_NS_stdio.cpp:

          Implemented ACE_OS::snprintf() by using ACE_OS::vsnprintf().
          Removed duplicate code and made maintaining easier.

        * ace/README:
        * ace/config-cygwin32.h:
        * ace/config-freebsd.h: